# CodingGame_SpringChallenge2020

./: .gitignore  CMakeLists.txt  README.md  generate_output.sh  main.cpp
GameController/: CMakeLists.txt
GameController/include/GameController/: Debug.hpp  GameController.hpp  Pacman.hpp  Pellet.hpp  Point.hpp
GameController/src/: GameController.cpp
tests/: CMakeLists.txt
tests/GameControllerTests/: CMakeLists.txt  GameControllerTests.cpp  main.cpp
